--- a/doc/libguide/graphdraw.bib
+++ b/doc/libguide/graphdraw.bib
@@ -546,3 +546,41 @@ od",
     year = 1997
 }
 
+@article{sfdp,
+  author =      "Y. F. Hu",
+  title =       "Efficient and High Quality Force-Directed Graph Drawing",
+  journal =     "Mathematica Journal",
+  volume =      "10",
+  year =        "2005",
+  pages =       "37-71",
+}
+
+@inproceedings  {sqtreemap,
+        author = "M. Bruls and K. Huizing and J. van Wijk",
+        title = "{Squarified Treemaps}",
+        booktitle= "Proceedings of Eurographics and IEEE TVCG Symposium on Visualization",
+        pages = {33--42},
+        city = "Vienna",
+        editor = "W. de Leeuw and R. van Liere",
+        year = 2000}
+
+@techreport {gml,
+	author="Michael Himsolt",
+	title="{GML: A portable Graph File Format}",
+	institution="Universitat Passau",
+    url="\url{http://www.fim.uni-passau.de/fileadmin/files/lehrstuhl/brandenburg/projekte/gml/gml-technical-report.pdf}"
+}
+
+@inproceedings{DBLP:conf/gd/BrandesEHHM00,
+  author    = {Ulrik Brandes and
+               Markus Eiglsperger and
+               Ivan Herman and
+               Michael Himsolt and
+               M. Scott Marshall},
+  title     = {GraphML Progress Report},
+  booktitle = {Graph Drawing},
+  year      = {2001},
+  pages     = {501-512},
+  ee        = {http://link.springer.de/link/service/series/0558/bibs/2265/22650501.htm},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
