--- a/doc/infosrc/output.2
+++ b/doc/infosrc/output.2
@@ -13,7 +13,7 @@ plugin library.
 This presents the most general case. A given installation may not provide
 one of the plugins, in which case, that transformation is not possible.
 <BR>
-<IMG WIDTH="80%" SRC="plugins.png">
+<IMG WIDTH="80%" SRC="/doc/info/plugins.png">
 <HR>
 <H2>Notes</H2>
 <OL TYPE="1">
