--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 January 26, 2012
 	- Modify the dijkstra tool to use only directed edges
+	- Output numbers without quotes if quotes are not needed on input
 	- Support gradient fill
 January 23, 2012
 	- Provide support for webp images
