--- a/lib/cgraph/cgraph.3
+++ b/lib/cgraph/cgraph.3
@@ -392,7 +392,7 @@ they are mapped to and from strings.
 
 .P0
 struct Agiddisc_s {             /* object ID allocator */
-	void *(*open) (Agraph_t * g);       /* associated with a graph */
+	void *(*open) (Agraph_t * g, Agdisc_t*);       /* associated with a graph */
 	long (*map) (void *state, int objtype, char *str, unsigned long *id, int createflag);
 	long (*alloc) (void *state, int objtype, unsigned long id);
 	void (*free) (void *state, int objtype, unsigned long id);
@@ -457,7 +457,7 @@ struct Agiodisc_s {
 } ;
 
 struct Agmemdisc_s {	/* memory allocator */
-	void	*(*open)(void);		/* independent of other resources */
+	void	*(*open)(Agdisc_t*);		/* independent of other resources */
 	void	*(*alloc)(void *state, size_t req);
 	void	*(*resize)(void *state, void *ptr, size_t old, size_t req);
 	void	(*free)(void *state, void *ptr);
