--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+February 29, 2012
+	- Allow GVPRPATH to specify that the default path be prepended or appended to it.
+February 27, 2012
+	- Support arbitrary lists of layers; allow the user to specify arbitrary layers for output.
+February 24, 2012
+	- A collection of gvpr scripts, which were part of the source package, are now
+      installed in <prefix>/share/graphviz/gvpr, and the that path is used as part of th
+      default built-in path for gvpr.
 February 15, 2012
 	- Update libexpr to reflect Glenn Fowler's changes including scopes for variables.
 February 9, 2012
